// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`openConfigFile 1`] = `
Object {
  "config": Object {
    "autoUpdate": true,
    "defaultNetworkInspect": false,
    "defaultRNPakcagerPorts": Array [
      8081,
    ],
    "defaultReactDevToolsTheme": "RNDebugger",
    "editor": "",
    "fontFamily": "monaco, Consolas, Lucida Console, monospace",
    "windowBounds": Object {
      "frame": true,
    },
  },
}
`;

exports[`readConfig 1`] = `
Object {
  "config": Object {
    "autoUpdate": true,
    "defaultNetworkInspect": false,
    "defaultRNPakcagerPorts": Array [
      8081,
    ],
    "defaultReactDevToolsTheme": "RNDebugger",
    "editor": "",
    "fontFamily": "monaco, Consolas, Lucida Console, monospace",
    "windowBounds": Object {
      "frame": true,
    },
  },
}
`;

exports[`readConfig 2`] = `
Object {
  "config": Object {
    "autoUpdate": false,
  },
}
`;

exports[`readConfig 3`] = `
Object {
  "config": Object {
    "autoUpdate": true,
    "defaultNetworkInspect": false,
    "defaultRNPakcagerPorts": Array [
      8081,
    ],
    "defaultReactDevToolsTheme": "RNDebugger",
    "editor": "",
    "fontFamily": "monaco, Consolas, Lucida Console, monospace",
    "windowBounds": Object {
      "frame": true,
    },
  },
  "isConfigBroken": true,
}
`;
